--- a/angular-forms-model/package.json
+++ b/angular-forms-model/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-forms-start",
+  "name": "angular-forms-model",
   "version": "0.0.0",
   "license": "MIT",
   "angular-cli": {},
